# StadiumMind

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_LOG.md  Readme.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
agents/: fan_agent.py  organizer_agent.py
core/: congestion.py  crowd_sim.py  graph_layout.py  incidents.py  routing.py  tasks.py  venue.py  visualization.py
tests/: test_agents.py  test_core.py  test_tasks.py  test_transport.py
