[project]
name = "stadiummind"
version = "1.0.0"
description = "GenAI-enabled architecture for Smart Stadiums & Tournament Operations (PromptWars 2026)"
requires-python = ">=3.10"

# ----------------------------------------------------------------------
# Ruff (lint)
# ----------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports/vars, undefined names, etc.)
    "B",      # flake8-bugbear (likely bugs / footguns)
    "C4",     # flake8-comprehensions (unnecessary dict()/list() calls, etc.)
    "I",      # isort (import ordering)
    "UP",     # pyupgrade (modern Python idioms)
    "SIM",    # flake8-simplify
    "BLE",    # flake8-blind-except (catch specific exceptions, not bare Exception)
]

[tool.ruff.lint.per-file-ignores]
# The tests/test_*.py `if __name__ == "__main__"` blocks each have a small
# manual test-runner loop that intentionally catches any exception a test
# raises so it can report PASS/FAIL per test and keep going - that's a
# harness pattern, not the "swallowing real bugs" anti-pattern this rule
# exists to catch (which is why agents/*.py narrows to OpenAIError instead
# of ignoring the rule).
"tests/*.py" = ["BLE001"]

# ----------------------------------------------------------------------
# Mypy (type checking)
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # streamlit/networkx/plotly/openai/dotenv have incomplete/no stubs
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
# Note on numpy: it's a transitive runtime dep (networkx's internal layout
# code needs it - see core/graph_layout.py), pinned to numpy<2.4 in
# requirements.txt because numpy 2.4+ uses PEP 695 stub syntax that mypy
# treats as a blocking parse error under python_version<3.12 regardless of
# any per-module mypy setting (open upstream issue, no config workaround:
# https://github.com/python/mypy/issues/21178). The version pin is the fix;
# nothing needed here in the mypy config itself.

# core/ and agents/ are the modules with real test coverage and reused
# graph/simulator types (nx.Graph, CrowdSimulator) worth enforcing full
# signatures on. app.py is intentionally left out: it's Streamlit UI-wiring
# code where most "parameters" are widget return values from an
# incompletely-stubbed library, so full annotation there is friction with
# no real payoff.
#
# disallow_any_generics is what makes disallow_untyped_defs mean something.
# Without it, a bare `dict` or `list` is a *fully annotated* signature as far
# as mypy is concerned - it's implicitly dict[Any, Any] - so the check passed
# while several signatures said nothing at all about what they took. There are
# a few distinct dicts flying around this codebase (congestion snapshots,
# trends, layout positions, task translations) and "dict" didn't distinguish
# them; core/congestion.py and core/crowd_sim.py now name the real shapes
# (CongestionSnapshot, Trends) and this setting keeps them from decaying back.
[[tool.mypy.overrides]]
module = ["core.*", "agents.*"]
disallow_untyped_defs = true
disallow_any_generics = true